[package]
name = "ssri"
version = "9.2.0"
authors = ["Kat Marchán <kzm@zkat.tech>"]
edition = "2018"
description = "Various utilities for handling Subresource Integrity."
license = "Apache-2.0"
repository = "https://github.com/zkat/ssri-rs"
homepage = "https://github.com/zkat/ssri-rs"
readme = "README.md"
rust-version = "1.84.0"

[dependencies]
base64 = "0.22.1"
digest = "0.10.7"
hex = "0.4.3"
miette = "7.4.0"
serde = { version = "1.0.217", optional = true }
sha-1 = "0.10.1"
sha2 = "0.10.8"
thiserror = "1.0.69"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[features]
default = ["serde"]

[dev-dependencies]
serde_derive = "1.0.217"
serde_json = "1.0.138"
